name:                persistent-instances-iproute
version:             0.1.0.0
synopsis:            Persistent instances for types in iproute
license:             BSD3
license-file:        LICENSE
author:              Lana Black
maintainer:          lanablack@amok.cc
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Database.Persistent.Instances.IP
  build-depends:       base >=4 && <5,
                       bytestring,
                       iproute,
                       persistent
  default-language:    Haskell2010
