name:                persistent-iproute
version:             0.2
synopsis:            Persistent instances for types in iproute
license:             BSD3
license-file:        LICENSE
author:              Lana Black
maintainer:          lanablack@amok.cc
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Database.Persist.IP
  other-modules:       Database.Persist.Instances.IP
  build-depends:       base >=4 && <5,
                       aeson >= 0.8,
                       aeson-iproute >= 0.1,
                       bytestring,
                       iproute >= 1.5,
                       http-api-data,
                       path-pieces,
                       persistent,
                       text
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans
